<resources>
    <string name="app_name">母子健康手册</string>
    <string name="activity_main_actionbar_content">母子健康手册</string>
    <string name="activity_main_yunQian_content">孕前篇</string>
    <string name="activity_main_yunChan_content">孕产篇</string>
    <string name="activity_main_erTong_content">儿童篇</string>
    <string name="activity_main_jieZhong_content">接种篇</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_yunqiang_zhengce">孕前政策</string>
    <string name="activity_main_yunqing_jihua">计划生育政策</string>
    <string name="activity_main_yunqing_yuedu">去阅读</string>
    <string name="activity_main_yunqing_huimin">惠民政策</string>
    <string name="activity_main_yunqiang_zhishidian">知识点</string>
    <string name="activity_main_yunqing_xiguan">养成良好习惯</string>
    <string name="activity_main_yunqing_yaowu">疾病与药物</string>
    <string name="activity_main_yunqing_jiankang">保持身体健康</string>
    <string name="activity_main_yunqing_zhuyi">怀孕时间及注意事项</string>
    <string name="activity_main_yunqiang_jilu">记录</string>
    <string name="activity_main_yunqing_xinxi">基本信息</string>
    <string name="activity_main_yunqing_jilu">去记录</string>
    <string name="activity_main_yunqing_ji">备孕爸妈自我记录</string>
    <string name="activity_main_yunqing_jiancha">孕前优生健康检查</string>
    <string name="activity_main_yunqing_tiwen">月经周期与基础体温</string>
    <string name="activity_main_yunQian_jihua">计划生育政策</string>
    <string name="yunqina_jihua_text1">1.国家推行计划生育，使人口的增长同经济和社会发展计划相适应。</string>
    <string name="yunqina_jihua_text2">2.夫妻双方有实行计划生育的义务。</string>
    <string name="yunqina_jihua_text3">3.国家提倡一对夫妻生育两个子女；符合法律、法规规定条件的，可以要求安排再生育子女。</string>
    <string name="yunqina_jihua_text4">4.育龄夫妻自主选择计划生育避孕节育措施，预防和减少非意愿妊娠。</string>
    <string name="yunqina_jihua_text5">5.实行生育登记制度，对生育两个以内（含两个）孩子的，不实行审批，由家庭自主安排生育。</string>
    <string name="yunqina_jihua_text6">6.建立完善包括生育支持、幼儿养育、青少年发展、老人赡养、病残照料等在内的家庭发展政策，鼓励按政策生育。</string>
    <string name="yunqina_jihua_text7">7.国家对实行计划生育的夫妻，按照规定给予奖励。</string>
    <string name="yunqina_jihua_text8">8.妇女怀孕、生育和哺乳期间，按照国家有关规定享受特殊劳动保护并可以获得帮助和补偿。</string>
    <string name="yunqina_jihua_text9">9.公民实行计划生育手术，享受国家规定的休假；地方人民政府可以给予奖励。</string>
    <string name="yunqina_jihua_text10">10.符合法律、法规规定生育子女的夫妻，可以获得延长生育假的奖励或者其他福利待遇。</string>
    <string name="activity_main_yunQian_huimin">惠民政策</string>
    <string name="activity_main_yunQian_huimin_title">孕前保健，国家有哪些惠民政策?</string>
    <string name="yunqina_huimin_text1">1.免费孕前优生健康检查。为了帮助您孕育健康的宝宝，政府为符合生育政策、准备怀孕的农业户籍夫妇免费提供孕前优生健康检查。符合条件的准备怀孕的夫妇每孩次可在本地定点服务机构享受一次免费孕前优生健康检查。</string>
    <string name="yunqina_huimin_text2">2.农村妇女免费增补叶酸。备孕妈妈从准备怀孕开始到怀孕后3个月内，可以到辖区内指定机构领取免费叶酸片，服用后可预防新生儿神经管缺陷。</string>
    <string name="activity_main_yunQian_xiguan">养成良好习惯</string>
    <string name="activity_main_yunqian_xiguan">养成良好习惯</string>
    <string name="activity_main_yunqian_jiancha">提前做好孕前优先健康检查</string>
    <string name="activity_main_yunqing_yesuan">孕前开始吃叶酸</string>
    <string name="activity_main_yunqing_fangshi">坚持健康的生活方式</string>
    <string name="activity_main_yunQian_yaowu">疾病与药物</string>
    <string name="activity_main_yunqian_yaowu">疾病与药物</string>
    <string name="activity_main_yunqian_kongzhi">控制慢性病</string>
    <string name="activity_main_yunqing_jinfang">谨防感染性疾病</string>
    <string name="activity_main_yunqing_heli">合理用药</string>
    <string name="activity_main_yunQian_jiankang">保持身体健康</string>
    <string name="activity_main_yunqian_kouqiang">口腔健康不容忽视</string>
    <string name="activity_main_yunqing_tizhong">保持最佳体重</string>
    <string name="activity_main_yunQian_zhuyi">怀孕时间及注意事项</string>
    <string name="activity_main_yunqian_shengyu">适龄生育</string>
    <string name="activity_main_yunqing_pougong">剖宫产史备孕妈妈注意事项</string>
    <string name="activity_main_yunqing_biyun">停用避孕药多久可以怀孕</string>
    <string name="activity_main_yunqing_huaiyun">取出宫内节育器后多久可以怀孕</string>
    <string name="activity_main_yunqing_shouyun">最佳受孕时期</string>
    <string name="activity_main_yunQian_jiancha">提前做好孕前优生健康检查</string>
    <string name="yunqina_jiancha_text1">夫妇在准备要宝宝的前3~6个月，请及时去定点服务机构接受孕前优生健康检查，评估影响优生的风险因素，并听从医生的建议和指导，采取措施消除不利的风险因素，积极治疗影响怀孕的各种疾病。</string>
    <string name="yunqina_jiancha_text2">孕前优生健康检查是为准备怀孕的夫妇在受孕之前提供的一系列优生保健服务，包括优生健康教育、病史询问、体格检查、临床试验室检查、影像学检查、风险评估、咨询指导等，具体内容为：</string>
    <string name="yunqina_jiancha_text3">（一）女性</string>
    <string name="yunqina_jiancha_text4">1.疾病史、家族史、生活方式等基本信息采集；</string>
    <string name="yunqina_jiancha_text5">2.身高、体重、心肺功能等体格检查；</string>
    <string name="yunqina_jiancha_text6">3.生殖系统检查</string>
    <string name="yunqina_jiancha_text7">4.白带常规、淋球菌、沙眼衣原体检测；</string>
    <string name="yunqina_jiancha_text8">5.血常规、血型检查、血糖测定；</string>
    <string name="yunqina_jiancha_text9">6.尿常规检查；</string>
    <string name="yunqina_jiancha_text10">7.肝功能（谷丙转氨酶）、肾功能（血肌酐）检测；</string>
    <string name="yunqina_jiancha_text11">8.甲状腺功能（促甲状腺激素）检测；</string>
    <string name="yunqina_jiancha_text12">9.乙型肝炎血清学五项检测；</string>
    <string name="yunqina_jiancha_text13">10.梅毒螺旋体检查；</string>
    <string name="yunqina_jiancha_text14">11.艾滋病检查；</string>
    <string name="yunqina_jiancha_text15">12.风疹病毒、巨细胞病毒、弓形体感染、单纯疱疹病毒检查；</string>
    <string name="yunqina_jiancha_text16">13.妇科超声常规检查。</string>
    <string name="yunqina_jiancha_text_man">（二）男性</string>
    <string name="yunqina_jiancha_text_man1">1.疾病史、家族史、生活方式等基本信息采集；</string>
    <string name="yunqina_jiancha_text_man2">2.身高、体重、心肺功能等体格检查；</string>
    <string name="yunqina_jiancha_text_man3">3.生殖系统检查；</string>
    <string name="yunqina_jiancha_text_man4">4.血型检查；</string>
    <string name="yunqina_jiancha_text_man5">5.尿常规检查；</string>
    <string name="yunqina_jiancha_text_man6">6.肝功能（谷丙转氨酶）、肾功能（血肌酐）检测；</string>
    <string name="yunqina_jiancha_text_man7">7.乙型肝炎血清学五项检测；</string>
    <string name="yunqina_jiancha_text_man8">8.梅毒螺旋体检查；</string>
    <string name="yunqina_jiancha_text_man9">9.艾滋病检查。</string>
    <string name="activity_main_yunQian_yesuan">孕前开始吃叶酸</string>
    <string name="yunqina_yesuan_text">补充叶酸，能有效预防宝宝神经管畸形。您需要从孕前3个月开始每天服用0.4mg叶酸，至少服用到孕后3个月，最好整个孕期服用。如果您曾经生过神经管畸形儿或正在服用抗癫痫药物，应每天吃4mg叶酸。另外，您还可多摄入富含叶酸的食物，如动物肝、肾、鸡蛋、豆类、绿叶蔬菜、水果及坚果等。</string>
    <string name="activity_main_yunQian_xinxi">基本信息</string>
    <string name="activity_main_yunqing_mother_name">母亲姓名</string>
    <string name="activity_main_yunqing_age">年龄</string>
    <string name="activity_main_yunqing_zhiye">职业</string>
    <string name="activity_main_yunqing_minzu">民族</string>
    <string name="activity_main_yunqing_id">身份证</string>
    <string name="activity_main_yunqing_huji">户口所在地</string>
    <string name="activity_main_yunqing_danwei">工作单位</string>
    <string name="activity_main_yunqing_dizhi">家庭住址</string>
    <string name="activity_main_yunqing_tel">联系电话</string>
    <string name="activity_main_yunqing_text">您填写的信息仅用于记录您的个人健康档案，不</string>
    <string name="activity_main_yunqing_text2">会用于其他用途，请放心填写。</string>
    <string name="activity_main_yunqing_father_name">父亲姓名</string>
    <string name="activity_main_yunqing_xuanze">请选择</string>
    <string name="activity_main_yunQian_jilu">备孕爸妈自我记录</string>
    <string name="activity_main_yunQian_mother_qingkuang">备孕妈妈基本情况</string>
    <string name="activity_main_yunqian_hunling">结婚年龄</string>
    <string name="activity_main_yunqing_sui">岁</string>
    <string name="activity_main_yunqing_yunling">计划怀孕年龄</string>
    <string name="activity_main_yunqing_shengao">身高</string>
    <string name="activity_main_yunqing_cm">cm</string>
    <string name="activity_main_yunqing_zhongliang">体重</string>
    <string name="activity_main_yunqing_kg">kg</string>
    <string name="activity_main_yunqing_bmi">BMI</string>
    <string name="activity_main_yunqing_shencai">身材:</string>
    <string name="activity_main_yunqing_zhengchang">正常体重</string>
    <string name="activity_main_yunqing_chaozhong">超重</string>
    <string name="activity_main_yunqing_feipang">肥胖</string>
    <string name="activity_main_yunqing_chaoqing">低体重</string>
    <string name="activity_main_yunqing_jieguo">备孕检查结果</string>
    <string name="activity_main_yunqing_jian">健康</string>
    <string name="activity_main_yunqing_jibing">疾病</string>
    <string name="activity_main_yunQian_father_qingkuang">备孕爸爸基本情况</string>
    <string name="activity_main_yunQian_qingkuang_ganxiang">记录您在备孕过程中的感想</string>
    <string name="activity_main_yunQian_yunjian">孕前优生健康检查记录</string>
    <string name="activity_main_yunqing_mother_tige">体格检查</string>
    <string name="activity_main_yunqing_shousuoya">收缩压</string>
    <string name="activity_main_yunqing_shuzhangya">舒张压</string>
    <string name="activity_main_yunqing_shengzhi">生殖系统检查</string>
    <string name="activity_main_yunqing_xuejian">血液检查</string>
    <string name="activity_main_yunqing_abo">ABO</string>
    <string name="activity_main_yunqing_rh">Rh</string>
    <string name="activity_main_yunqing_xuedanbai">血红蛋白</string>
    <string name="activity_main_yunqing_xuexiaoban">血小板计数</string>
    <string name="activity_main_yunqing_xuetang">空腹血糖</string>
    <string name="activity_main_yunqing_manbing_shaicha">慢性病筛查</string>
    <string name="activity_main_yunqing_yunjian_gaoxueya">高血压</string>
    <string name="activity_main_yunqing_yunjian_no">否</string>
    <string name="activity_main_yunqing_yunjian_yes">是</string>
    <string name="activity_main_yunqing_yunjian_tangniaobing">糖尿病</string>
    <string name="activity_main_yunqing_yunjian_gangongneng">肝功能</string>
    <string name="activity_main_yunqing_yunjian_y">正常</string>
    <string name="activity_main_yunqing_yunjian_n">异常</string>
    <string name="activity_main_yunqing_yunjian_shengongneng">肾功能</string>
    <string name="activity_main_yunqing_yunjian_jiazhuangxian">促甲状腺激素水平</string>
    <string name="activity_main_yunqing_shengzhi_ganran">生殖道感染</string>
    <string name="activity_main_yunqing_yunjian_xijun">细菌性阴道病</string>
    <string name="activity_main_yunqing_yunjian_dichong">滴虫感染</string>
    <string name="activity_main_yunqing_yunjian_yin">阴性</string>
    <string name="activity_main_yunqing_yunjian_yang">阳性</string>
    <string name="activity_main_yunqing_yunjian_linqiujun">淋球菌感染</string>
    <string name="activity_main_yunqing_yunjian_jiasi">假丝酵母菌感染</string>
    <string name="activity_main_yunqing_yunjian_shayan">沙眼衣原体筛查</string>
    <string name="activity_main_yunqing_ganran_shaicha">感染性疾病筛查</string>
    <string name="activity_main_yunqing_yunjian_yigan">乙型肝炎表面抗原</string>
    <string name="activity_main_yunqing_yunjian_meidu">梅毒螺旋体筛查</string>
    <string name="activity_main_yunqing_yunjian_hiv">HIV抗体检测</string>
    <string name="activity_main_yunqing_ganran_fengzhen">风疹病毒检查</string>
    <string name="activity_main_yunqing_yunjian_lgG">lgG抗体</string>
    <string name="activity_main_yunqing_ganran_juxibao">巨细胞病毒检查</string>
    <string name="activity_main_yunqing_yunjian_lgM">lgM抗体</string>
    <string name="activity_main_yunqing_ganran_gongxing">弓形体检查</string>
    <string name="activity_main_yunqing_father_tige">体格检查</string>
    <string name="activity_main_yunQian_fangshi">坚持健康的生活方式</string>
    <string name="yunqina_fangshi_text1">增加营养，不偏食，不挑食。饮食清淡，少油少盐，粗细荤素搭配均衡，坚持每天喝奶，吃大豆或豆制品，多吃蔬菜、水果、薯类，适当增加海产品的摄入。</string>
    <string name="yunqina_fangshi_text2">注意居住环境。不住新装修的房间，孕前及孕期都要远离不利环境(包括农药、铅、汞等重金属、射线、噪音、和高温)，尽量不染发，不密切接触猫狗，最好不用电热毯，不洗桑拿浴。</string>
    <string name="yunqina_fangshi_text3">保持健康行为。早睡早起，戒烟戒酒，远离吸烟人群和毒品。保持心态平和、放松。</string>
    <string name="yunqina_fangshi_text4">备孕，丈夫也要积极参与：</string>
    <string name="yunqina_fangshi_text5">*戒烟戒酒</string>
    <string name="yunqina_fangshi_text6">*远离辐射</string>
    <string name="yunqina_fangshi_text7">*暂别时尚生活</string>
    <string name="yunqina_fangshi_text8">*补充叶酸</string>
    <string name="yunqina_fangshi_text9">*保持好情绪</string>
    <string name="activity_main_yunQian_kongzhi">控制慢性病</string>
</resources>