<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/activity_main_actionbar_background"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:src="@mipmap/back_word"
            android:id="@+id/img_yunqian_fanhui"/>
        <!--提前做好孕前优生健康检查-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/activity_main_yunQian_jiancha"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!---->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_jiancha_text">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:text="@string/activity_main_yunQian_jiancha"
                    android:textColor="#A883BA"
                    android:textSize="28sp"
                    android:paddingLeft="20sp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dip"
                android:layout_below="@+id/linear_jiancha_text">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yunqian_jihuan"
                    android:padding="15dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:id="@+id/linear_jiancha_biankuang">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text1"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text2"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text3"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text4"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text5"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text6"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text7"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text8"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text9"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text10"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text11"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text12"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text13"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text14"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text15"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text16"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man1"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man2"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man3"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man4"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man5"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man6"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man7"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man8"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_jiancha_text_man9"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45px"
                    android:layout_below="@+id/linear_jiancha_biankuang"></LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>