<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/activity_main_actionbar_background"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:src="@mipmap/back_word"
            android:id="@+id/img_yunqian_fanhui"/>
        <!--标题-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:text="@string/activity_main_yunQian_huimin"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!---->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_jihua_text">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:text="@string/activity_main_yunQian_huimin_title"
                    android:textColor="#A883BA"
                    android:textSize="35sp"
                    android:paddingLeft="20sp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dip"
                android:layout_below="@+id/linear_jihua_text">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yunqian_jihuan"
                    android:padding="15dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:id="@+id/linear_jihua_biankuang">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_huimin_text1"
                        android:textColor="#000000"
                        android:textSize="15sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yunqina_huimin_text2"
                        android:textColor="#000000"
                        android:textSize="15sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45px"
                    android:layout_below="@+id/linear_jihua_biankuang"></LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>